--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -21,3 +21,8 @@
 	helper = osxkeychain
 [core]
 	editor = /usr/bin/vim
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
